--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,9 @@
+.uvx-logo {
+    position: fixed;
+    margin: 2%;
+    z-index: 2;
+}
+
 .canvas-container {
     width: 100vw;
     height: 100vh;
