--- a/src/css/LoadingScreen.css
+++ b/src/css/LoadingScreen.css
@@ -7,13 +7,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    opacity: 1;
-    transition: opacity 0.5s ease-out, background-color 0.5s ease-out;
+    transition: visibility 0s 3s, opacity 2s linear;
 }
 
 #loading-screen.fade-out {
     opacity: 0;
-    background-color: rgba(255, 255, 255, 0);
+    visibility: hidden;
 }
 
 .loading-spinner {
