state for device - several checks for performance

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -9,3 +9,16 @@
     height: 100vh;
     z-index: 1;
 }
+
+@media screen and (max-width: 820px) {
+    .uvx-logo {
+        width: 25%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .uvx-logo {
+        width: 33%;
+        bottom: 0;
+    }
+}
