--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,11 +1,34 @@
 .uvx-logo {
-    position: fixed;
-    margin: 2%;
-    z-index: 2;
+  position: fixed;
+  margin: 2%;
+  z-index: 2;
 }
 
 .canvas-container {
-    width: 100vw;
-    height: 100vh;
-    z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+
+.modal {
+  background-color: white;
+  color: black;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  z-index: 4;
 }
