--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,16 @@
+:root {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
 .uvx-logo {
   position: fixed;
   margin: 2%;
@@ -5,12 +18,13 @@
 }
 
 .canvas-container {
+  position: relative;
   width: 100vw;
   height: 100vh;
-  z-index: 1;
+  z-index: 0;
 }
 
-.modal-overlay {
+/* .modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -21,9 +35,9 @@
   justify-content: center;
   align-items: center;
   z-index: 3;
-}
+} */
 
-.modal {
+/* .modal {
   background-color: white;
   color: black;
   padding: 20px;
@@ -31,7 +45,7 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
   z-index: 4;
-}
+} */
 
 @media screen and (max-width: 820px) {
   .uvx-logo {
