--- a/src/css/LoadingScreen.css
+++ b/src/css/LoadingScreen.css
@@ -1,19 +1,24 @@
 #loading-screen {
+    position: relative;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(255, 255, 255, 1);
+    /* background: rgba(255, 255, 255, 1); */
+    background: red;
     color: #0ED8A5;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* transition: visibility 0s 3s, opacity 2s linear; */
+    z-index: 1;
+    opacity: 1;
+    transition: all 1s linear;
 }
 
-/* #loading-screen.fade-out {
+#loading-screen.fade-out {
     opacity: 0;
     visibility: hidden;
-} */
+    background: rgba(255, 255, 255, 0);
+}
 
 .loading-spinner {
     position: absolute;
