--- a/src/css/App.css
+++ b/src/css/App.css
@@ -11,6 +11,12 @@ body {
   min-height: 100vh;
 }
 
+#app-container {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+
 .uvx-logo {
   position: fixed;
   margin: 2%;
@@ -18,9 +24,9 @@ body {
 }
 
 .canvas-container {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   z-index: 0;
 }
 
