--- a/src/css/LoadingScreen.css
+++ b/src/css/LoadingScreen.css
@@ -1,9 +1,8 @@
 #loading-screen {
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-    /* background: rgba(255, 255, 255, 1); */
-    background: red;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: rgba(255, 255, 255, 1);
     color: #0ED8A5;
     display: flex;
     flex-direction: column;
@@ -11,13 +10,11 @@
     align-items: center;
     z-index: 1;
     opacity: 1;
-    transition: all 1s linear;
+    transition: opacity 1s linear;
 }
 
 #loading-screen.fade-out {
     opacity: 0;
-    visibility: hidden;
-    background: rgba(255, 255, 255, 0);
 }
 
 .loading-spinner {
