--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,47 +1,172 @@
-.uvx-logo {
-    position: fixed;
-    margin: 2%;
-    z-index: 2;
+.canvas-container {
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+}
+
+.container {
+  width: 250px;
+  height: 250px;
+  background: purple;
+  margin-right: 60px;
+  border-radius: 50px;
+  position: relative;
+  overflow: hidden;
+}
+
+.doctor-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 20%;
+}
+
+.label {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  padding: 18px 28px;
+  padding-right: 38px;
+  position: absolute;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  color: white;
+  height: 45px;
+  width: 100%;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.863) 0%,
+    rgba(0, 0, 0, 0.753) 35%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+.status-indicator {
+  width: 30px;
+  height: 30px;
+  background: #0ed8a5;
+  border-radius: 20px;
+}
+
+.label p {
+  font-weight: 600;
+}
+
+.fixed-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  z-index: 100;
+  padding: 28px;
+}
+
+.info-container {
+  transform: translate(-50%, -50%);
+  color: #ffffff;
+  border-radius: 55px;
+  width: auto;
+  background: rgba(0, 0, 0, 0.144);
+  backdrop-filter: blur(120px);
+  padding: 13px 10px;
+  padding-right: 22px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 500;
+  font-size: 24px;
+  gap: 15px;
+  height: 35px;
+}
+
+.info-container2 {
+  color: #ffffff;
+  border-radius: 55px;
+  width: auto;
+  background: rgba(0, 0, 0, 0.144);
+  backdrop-filter: blur(120px);
+  padding: 13px 10px;
+  padding-right: 22px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 500;
+  font-size: 20px;
+  gap: 15px;
+  height: 35px;
+}
+
+.info-container3 {
+  color: #ffffff;
+  border-radius: 55px;
+  width: auto;
+  background: rgba(0, 0, 0, 0.144);
+  backdrop-filter: blur(120px);
+  padding: 13px 10px;
+  padding-right: 22px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 400;
+  font-size: 18px;
+  z-index: 1000;
+  height: 35px;
+  position: fixed;
+  bottom: 28px;
+  right: 28px;
+}
+
+.custom-svg {
+  width: 39px;
+  height: 38px;
+}
+
+.custom-path {
+  stroke: #110d2d;
+  stroke-width: 3.16667;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+
+.modal {
+  background-color: white;
+  color: black;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  z-index: 4;
+}
+
+@media screen and (max-width: 820px) {
+  .uvx-logo {
+    width: 25%;
   }
-  
-  .canvas-container {
-    width: 100vw;
-    height: 100vh;
-    z-index: 1;
+}
+
+@media screen and (max-width: 500px) {
+  .uvx-logo {
+    width: 33%;
+    bottom: 0;
   }
-  
-  .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 3;
-  }
-  
-  .modal {
-    background-color: white;
-    color: black;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    z-index: 4;
-  }
-  
-  @media screen and (max-width: 820px) {
-    .uvx-logo {
-        width: 25%;
-    }
-  }
-  
-  @media screen and (max-width: 500px) {
-    .uvx-logo {
-        width: 33%;
-        bottom: 0;
-    }
-  }
+}
