--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,47 +1,44 @@
+:root {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+#app-container {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+
 .uvx-logo {
-    position: fixed;
-    margin: 2%;
-    z-index: 2;
+  position: fixed;
+  margin: 2%;
+  z-index: 2;
+}
+
+.canvas-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+@media screen and (max-width: 820px) {
+  .uvx-logo {
+      width: 25%;
   }
-  
-  .canvas-container {
-    width: 100vw;
-    height: 100vh;
-    z-index: 1;
+}
+
+@media screen and (max-width: 500px) {
+  .uvx-logo {
+      width: 33%;
+      bottom: 0;
   }
-  
-  .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 3;
-  }
-  
-  .modal {
-    background-color: white;
-    color: black;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    z-index: 4;
-  }
-  
-  @media screen and (max-width: 820px) {
-    .uvx-logo {
-        width: 25%;
-    }
-  }
-  
-  @media screen and (max-width: 500px) {
-    .uvx-logo {
-        width: 33%;
-        bottom: 0;
-    }
-  }
+}
