Ran prettier write

--- a/src/css/LoadingScreen.css
+++ b/src/css/LoadingScreen.css
@@ -3,7 +3,7 @@
   height: 100%;
   width: 100%;
   background: rgba(255, 255, 255, 1);
-  color: #0ED8A5;
+  color: #0ed8a5;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -21,67 +21,75 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   width: 150px;
   height: 150px;
   background: transparent;
   border: 3px solid black;
   border-radius: 50%;
-  text-align:  center;
+  text-align: center;
   line-height: 150px;
   font-family: sans-serif;
   font-size: 20px;
-  color:#0ED8A5;
+  color: #0ed8a5;
   letter-spacing: 4px;
   text-transform: uppercase;
-  text-shadow: 0 0 10px #0ED8A5;
-  box-shadow: 0 0 20px rgba(0,0,0,.5);
+  text-shadow: 0 0 10px #0ed8a5;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 .loading-spinner:before {
-content: '';
-position: absolute;
-top: -3px;
-left: -3px;
-width: 100%;
-height: 100%;
-border: 3px solid transparent;
-border-top: 3px solid #0ED8A5;
-border-right: 3px solid #0ED8A5;
-border-radius: 50%;
-animation: animateC 2s linear infinite;
+  content: '';
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  width: 100%;
+  height: 100%;
+  border: 3px solid transparent;
+  border-top: 3px solid #0ed8a5;
+  border-right: 3px solid #0ed8a5;
+  border-radius: 50%;
+  animation: animateC 2s linear infinite;
 }
 
 span {
-display: block;
-position: absolute;
-top: calc(50% - 2px);
-left: 50%;
-width: 50%;
-height: 4px;
-background: transparent;
-transform-origin: left;
-animation: animate 2s linear infinite;
+  display: block;
+  position: absolute;
+  top: calc(50% - 2px);
+  left: 50%;
+  width: 50%;
+  height: 4px;
+  background: transparent;
+  transform-origin: left;
+  animation: animate 2s linear infinite;
 }
 
 span:before {
-content: '';
-position: absolute;
-width: 16px;
-height: 16px;
-border-radius: 50%;
-background:#0ED8A5;
-top: -6px;
-right: -8px;
-box-shadow: 0 0 20px #0ED8A5;
+  content: '';
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #0ed8a5;
+  top: -6px;
+  right: -8px;
+  box-shadow: 0 0 20px #0ed8a5;
 }
 
 @keyframes animateC {
-0% { transform:rotate(0deg); }
-100% { transform:rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes animate {
-0% { transform:rotate(45deg); }
-100% { transform:rotate(405deg); }
+  0% {
+    transform: rotate(45deg);
+  }
+  100% {
+    transform: rotate(405deg);
+  }
 }
