--- a/src/css/LoadingScreen.css
+++ b/src/css/LoadingScreen.css
@@ -9,7 +9,7 @@
   pointer-events: none;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 2;
   opacity: 1;
   transition: opacity 1s linear;
 }
@@ -53,7 +53,7 @@
   animation: animateC 2s linear infinite;
 }
 
-span {
+.loading-text {
   display: block;
   position: absolute;
   top: calc(50% - 2px);
@@ -65,7 +65,7 @@ span {
   animation: animate 2s linear infinite;
 }
 
-span:before {
+.loading-text:before {
   content: '';
   position: absolute;
   width: 16px;
@@ -78,19 +78,11 @@ span:before {
 }
 
 @keyframes animateC {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+  0% { transform: rotate(0deg) }
+  100% { transform: rotate(360deg) }
 }
 
 @keyframes animate {
-  0% {
-    transform: rotate(45deg);
-  }
-  100% {
-    transform: rotate(405deg);
-  }
+  0% { transform: rotate(45deg) }
+  100% { transform: rotate(405deg) }
 }
