--- a/src/css/SetupScreen.css
+++ b/src/css/SetupScreen.css
@@ -11,23 +11,81 @@
   z-index: 3;
 }
 
-#scene-selection-form {
-  display: flex;
-  gap: 1rem;
-  line-height: 150px;
-  font-family: sans-serif;
-  font-size: 20px;
-  color: #0ed8a5;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  text-shadow: 0 0 10px #0ed8a5;
+.setup-screen-bg-video {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
-.scene-selection-button {
-  background-color: black;
-  color: white;
-  padding: 1rem 2rem;
-  font-size: 16px;
-  border-radius: 2rem 2rem;
+.select-environment-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1.5rem;
+  background: #272727;
+  padding: 1% 2%;
+  font-family: "Barlow Semi Condensed";
+  font-style: italic;
+  font-weight: 600;
+}
+
+.select-environment-title h3 {
+  color: #F9CC35;
+  font-size: 2.5rem;
+  letter-spacing: -1.181px;
+  margin: 0;
+}
+
+.select-environment-title h2 {
+  color: #FFF;
+  font-size: 4rem;
+  letter-spacing: -2.009px;
+  margin: 0;
+}
+
+#environment-cards-container {
+  display: flex;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+.environment-card {
+  position: relative;
+  width: 350px;
+  aspect-ratio: 1 / 1.5;
+  background-size: cover;
+  background-position: center;
+  border-radius: 1.5rem;
   cursor: pointer;
+  overflow: hidden;
+}
+
+.parallax-bg {
+  position: absolute;
+  width: 120%; /* Increase width to hide edges */
+  height: 120%; /* Increase height to hide edges */
+  top: -10%;
+  left: -10%;
+  background-size: cover;
+  background-position: center;
+  transition: transform 0.1s;
+}
+
+.hover-text {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: white;
+  font-family: "Barlow Semi Condensed";
+  font-size: 2rem;
+  width: 100%;
+  text-align: center;
+  font-style: italic;
+  font-weight: 600;
+  pointer-events: none;
+  opacity: 0; /* Start hidden */
 }
