--- a/src/css/LoadingScreen.css
+++ b/src/css/LoadingScreen.css
@@ -3,13 +3,13 @@
   height: 100%;
   width: 100%;
   background: rgba(255, 255, 255, 1);
-  color: #0ed8a5;
-  display: flex;
-  flex-direction: column;
+  background-size: cover;
+  background-position: center;
+  color: white;
   pointer-events: none;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
+  display: flex;
+  align-items: flex-end;
+  z-index: 3;
   opacity: 1;
   transition: opacity 1s linear;
 }
@@ -18,71 +18,10 @@
   opacity: 0;
 }
 
-.loading-spinner {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 150px;
-  height: 150px;
-  background: transparent;
-  border: 3px solid black;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 150px;
-  font-family: sans-serif;
-  font-size: 20px;
-  color: #0ed8a5;
-  letter-spacing: 4px;
-  text-transform: uppercase;
-  text-shadow: 0 0 10px #0ed8a5;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+.splash-video-overlay {
+  display: flex;
 }
 
-.loading-spinner:before {
-  content: '';
-  position: absolute;
-  top: -3px;
-  left: -3px;
-  width: 100%;
-  height: 100%;
-  border: 3px solid transparent;
-  border-top: 3px solid #0ed8a5;
-  border-right: 3px solid #0ed8a5;
-  border-radius: 50%;
-  animation: animateC 2s linear infinite;
-}
-
-.loading-text {
-  display: block;
-  position: absolute;
-  top: calc(50% - 2px);
-  left: 50%;
-  width: 50%;
-  height: 4px;
-  background: transparent;
-  transform-origin: left;
-  animation: animate 2s linear infinite;
-}
-
-.loading-text:before {
-  content: '';
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  background: #0ed8a5;
-  top: -6px;
-  right: -8px;
-  box-shadow: 0 0 20px #0ed8a5;
-}
-
-@keyframes animateC {
-  0% { transform: rotate(0deg) }
-  100% { transform: rotate(360deg) }
-}
-
-@keyframes animate {
-  0% { transform: rotate(45deg) }
-  100% { transform: rotate(405deg) }
+.splash-video-overlay video {
+  object-fit: cover;
 }
