--- a/src/css/SetupScreen.css
+++ b/src/css/SetupScreen.css
@@ -21,30 +21,11 @@
 }
 
 .select-environment-title {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-radius: 1.5rem;
+  border-radius: var(--border-radius);
   background: #272727;
   padding: 1% 2%;
-  font-family: "Barlow Semi Condensed";
-  font-style: italic;
-  font-weight: 600;
-}
-
-.select-environment-title h3 {
-  color: #F9CC35;
-  font-size: 2.5rem;
-  letter-spacing: -1.181px;
-  margin: 0;
-}
-
-.select-environment-title h2 {
-  color: #FFF;
-  font-size: 4rem;
-  letter-spacing: -2.009px;
-  margin: 0;
 }
 
 #environment-cards-container {
@@ -59,7 +40,7 @@
   aspect-ratio: 1 / 1.5;
   background-size: cover;
   background-position: center;
-  border-radius: 1.5rem;
+  border-radius: var(--border-radius);
   cursor: pointer;
   overflow: hidden;
 }
@@ -80,12 +61,12 @@
   top: 50%;
   transform: translateY(-50%);
   color: white;
-  font-family: "Barlow Semi Condensed";
-  font-size: 2rem;
+  font-family: var(--font-primary);
+  font-size: var(--font-medium);
   width: 100%;
   text-align: center;
-  font-style: italic;
-  font-weight: 600;
+  font-style: var(--font-style);
+  font-weight: var(--font-weight);
   pointer-events: none;
   opacity: 0; /* Start hidden */
 }
