--- a/src/css/CountdownScreen.css
+++ b/src/css/CountdownScreen.css
@@ -6,5 +6,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 25%;
+}
+
+.countdown-container video {
+  height: 100%;
+  width: 100%;
 }
