--- a/src/css/ScoreDisplay.css
+++ b/src/css/ScoreDisplay.css
@@ -1,10 +1,19 @@
-.score-ui-container {
+#score-ui-bar {
   position: fixed;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  padding: 2% 3%;
   z-index: 1;
-  margin: 2% 3%;
+  /* border: 2px solid red; */
+}
+
+.score-ui-container {
   width: 25%;
+}
+
+.score-ui-container video {
+  width: 25%;
+  mix-blend-mode: lighten;
 }
 
 .score-tracker {
