--- a/src/css/ScoreDisplay.css
+++ b/src/css/ScoreDisplay.css
@@ -6,17 +6,22 @@
   z-index: 1;
 }
 
-.score-ui-container {
+.bubble-animations {
   position: relative;
   display: flex;
-  width: 25%;
+  min-width: 80px;
+  width: 5%;
+}
+
+.bubble-animations video {
+  width: 100%;
 }
 
 .animation {
   visibility: visible;
-  border: 3px solid var(--uvx-primary);
-  box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.5);
-  width: 70px;
+  border: 3px solid white;
+  border-radius: 1.5rem 0 0 1.5rem;
+  box-shadow: inset 0px 10px 10px rgba(0,0,0, 0.3);
 }
 
 .hide {
@@ -28,31 +33,66 @@
   z-index: 2;
 }
 
+.score-ui-container {
+  position: relative;
+  display: flex;
+  width: 25%;
+}
+
 .score-tracker {
-  position: absolute;
-  z-index: -1;
   display: flex;
   align-items: center;
   width: 100%;
 }
 
-.placeholder-bubble-effect {
-  height: 70px;
-  width: 20%;
-}
-
 .player-score-container {
   background-color: aquamarine;
   width: 100%;
-  padding: 2% 5%;
+  height: 100%;
+  padding: 1rem 2rem;
 }
 
+.score-popped, .score-possible {
+  color: white;
+  font-weight: var(--font-weight);
+  font-family: var(--font-primary);
+  margin: 0 2%;
+}
 .score-popped {
-  font-size: 2.5rem;
-  margin-right: 3%;
+  font-size: var(--font-medium);
   z-index: 2;
+}
+
+.score-possible {
+  font-size: var(--font-small);
+  margin-left: 3%;
 }
 
 .streak-effect {
   background: orange;
+}
+
+@media screen and (max-width: 1250px) {
+  .score-ui-container {
+    width: 30%;
+  }
+
+  .player-score-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .score-possible {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .score-popped {
+    font-size: var(--font-small);
+  }
+
+  .score-ui-container {
+    width: 50%;
+  }
 }
