--- a/src/css/ScoreDisplay.css
+++ b/src/css/ScoreDisplay.css
@@ -17,12 +17,14 @@
 
 .bubble-animations video {
   width: 100%;
+  mix-blend-mode: screen;
 }
 
 .animation {
   visibility: visible;
   border: 4px solid white;
   box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.2);
+  mix-blend-mode: screen;
 }
 
 .hide {
@@ -64,14 +66,14 @@
 }
 
 .streak-effect {
-  color: orange;
+  color: #ffa500;
 }
 
 .score-ui-container {
   display: flex;
   width: 25%;
   transform: skew(-15deg, 0);
-  mask-image: linear-gradient(to right, rgba(0, 0, 0, 1.0) 50%, transparent 100%);
+  mask-image: linear-gradient(to right, rgba(0, 0, 0, 1.0) 5%, transparent 100%);
   background: #3ac393;
 }
 
