--- a/src/css/ScoreDisplay.css
+++ b/src/css/ScoreDisplay.css
@@ -73,23 +73,40 @@
   display: flex;
   width: 25%;
   transform: skew(-15deg, 0);
-  mask-image: linear-gradient(to right, rgba(0, 0, 0, 1.0) 5%, transparent 100%);
+  overflow: hidden;
+}
+
+.score-ui-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background: #3ac393;
+}
+
+.score-ui-container::before, .score-bg-video {
+  z-index: -1;
+  mask-image: linear-gradient(to right, rgba(0, 0, 0, 1.0) 30%, transparent 100%);
 }
 
 .score-bg-video {
   position: absolute;
-  object-fit: contain;
   width: 100%;
   mix-blend-mode: color-dodge;
-  z-index: -1;
 }
 
 .score-content {
   display: flex;
-  align-items: end;
+  flex-direction: column;
+  justify-content: space-evenly;
   padding-left: calc(10% + 80px);
-  padding-bottom: 3%;
+  width: 100%;
+}
+
+.score-possible-container {
+  display: flex;
   width: 100%;
 }
 
@@ -101,6 +118,34 @@
 .score-possible {
   font-size: var(--font-small);
   margin-left: 4%;
+}
+
+.score-progress-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+  width: 75%;
+  height: 25%;
+  margin-left: 5%;
+  transform: skew(-15deg, 0);
+  background: rgba(113, 239, 220, 0.6);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+.chunk {
+  height: 100%;
+  width: 20%;
+  box-shadow: inset 5px 0px 5px rgba(61, 142, 108, 0.2);
+  overflow: hidden;
+  border: 2px solid rgba(61, 142, 108, 0.8);
+}
+
+.colored-bar {
+  position: absolute;
+  z-index: -1;
+  height: 100%;
+  background-color: #32EEA4;
 }
 
 @media screen and (max-width: 1250px) {
