--- a/src/css/App.css
+++ b/src/css/App.css
@@ -24,6 +24,15 @@ body,
   width: 100%;
   height: 100%;
   overflow: hidden;
+  /* Hide scrollbar for Firefox */
+  scrollbar-width: none;
+  /* Hide scrollbar for internet explorer/edge */
+  -ms-overflow-style: none;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
 }
 
 /* the .webgl class is assigned to the canvas by Three.js */
