minor css changes

--- a/src/css/UVXBrandWatermark.css
+++ b/src/css/UVXBrandWatermark.css
@@ -1,7 +1,7 @@
 #uvx-watermark-container {
   position: absolute;
   right: 0;
-  bottom: 15%;
+  bottom: 20%;
   width: 18%;
   height: 10%;
   max-height: 10%;
@@ -12,13 +12,13 @@
 }
 
 #uvx-watermark-container::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background: linear-gradient(#3ac393, #47ffbf);
-  mask-image: linear-gradient(to left, rgba(0, 0, 0, 1.0) 10%, transparent 100%);
+  mask-image: linear-gradient(to left, rgba(0, 0, 0, 1) 10%, transparent 100%);
   z-index: 0;
 }
