Added transparent countdown screen and audio

--- a/src/css/ScoreDisplay.css
+++ b/src/css/ScoreDisplay.css
@@ -67,6 +67,7 @@
 
 .streak-effect {
   color: #ffa500;
+  text-shadow: 1px 1px 2px black, 0 0 1em orange, 0 0 0.2em black;
 }
 
 .score-ui-container {
