--- a/src/css/ResultsScreen.css
+++ b/src/css/ResultsScreen.css
@@ -1,6 +1,7 @@
 #results-screen {
   display: flex;
   position: fixed;
+  width: 100%;
   height: 100vh;
   width: 100%;
   color: var(--uvx-primary);
