--- a/src/css/ResultsScreen.css
+++ b/src/css/ResultsScreen.css
@@ -1,23 +1,58 @@
-body {
-  font-family: var(--font-primary);
-  font-weight: var(--font-weight);
-  font-style: var(--font-style);
+#results-screen {
+  display: flex;
+  position: fixed;
+  height: 100vh;
+  width: 100%;
   color: var(--uvx-primary);
+  font-family: var(--font-primary);
+  align-items: center;
+  justify-content: center;
+  pointer-events: all;
+  z-index: 4;
+  padding: 5%;
+  transition: all 5s ease-in-out;
+  background-color: rgba(39, 39, 39, .65);
+  backdrop-filter: blur(50px);
+  backdrop-filter: grayscale(100%);
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: var(--font-primary);
+.achievement-container {
+  display: flex;
+  flex-direction: column;
+  padding: 2%;
+  border-radius: var(--border-radius);
+  border: 2px solid red;
+}
+
+.achievement-container::before{
+  content: "ACHIEVEMENTS";
+  position: absolute;
+  margin-top: -4rem;
+  margin-left: -2%;
+  font-size: var(--font-medium);
   font-weight: var(--font-weight);
-  color: var(--font-accent-color);
+  text-shadow: 3px 3px 6px black;
 }
 
-p, label, span {
-  font-family: var(--font-primary);
-  font-size: var(--font-small);
+#achievement-item {
+  display: flex;
+  gap: 25px;
+  color: white;
+  font-size: 2rem;
+  margin-bottom: 25px;
 }
 
-.achievement-item {
-  font-family: var(--font-primary);
+.achievement-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.achievement-title {
+  font-weight: var(--font-weight);
+}
+
+.achievement-description {
+  color: rgb(214, 207, 207);
   font-size: var(--font-small);
 }
 
@@ -33,7 +68,7 @@ button {
   font-size: var(--font-medium);
 }
 
-.screen-container {
+/* .screen-container {
   position: fixed;
   width: 100%;
   height: 100vh;
@@ -42,7 +77,7 @@ button {
   align-items: center;
   background-color: rgba(39, 39, 39, .95);
   z-index: 99;
-}
+} */
 
 .results-text-bg {
   display: flex;
