Improved CSS var usage and protractor responsiveness

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -9,7 +9,9 @@
   --font-weight: 600;
   --font-style: italic;
   --font-accent-color: #f9cc35;
+  --callout-bg-color: #272727;
   --uvx-primary: #0ed8a5;
+  --uvx-secondary: #3560f9;
   --border-radius: 1.5rem;
   --font-large: 4rem;
   --font-medium: 2.5rem;
