--- a/src/css/SetupScreen.css
+++ b/src/css/SetupScreen.css
@@ -24,7 +24,7 @@
   justify-content: center;
   align-items: center;
   border-radius: var(--border-radius);
-  background: #272727;
+  background: var(--callout-bg-color);
   padding: 1% 2%;
 }
 
