--- a/src/css/ViewScreen.css
+++ b/src/css/ViewScreen.css
@@ -1,19 +1,16 @@
 .view-ui-container {
   display: flex;
   position: fixed;
-  bottom: 10px;
-  right: 10px;
-  width: 100px;
-  height: 80px;
-  color: #0ed8a5;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  bottom: 3%;
+  right: 1%;
+  width: 10%;
+  color: white;
+  font-family: var(--font-primary);
   align-items: center;
   justify-content: center;
   pointer-events: all;
   z-index: 3;
-  transition: all 0.1s ease-in-out;
-  padding: 5%;
-  transition: all 5s ease-in-out;
+  padding: 1%;
   backdrop-filter: blur(50px);
 }
 
@@ -22,26 +19,21 @@
 }
 
 .view-button {
-  background-color: #0ed8a5;
-  color: #fff;
+  background-color: var(--uvx-primary);
   border: none;
+  color: white;
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
   font-size: 1.2rem;
-  font-weight: 600;
+  font-weight: var(--font-weight);
   transition: all 0.3s ease-in-out;
 }
 
 .view-button:hover {
-  background-color: #0ed8a5;
-  color: #fff;
   transform: scale(1.1);
 }
 
 .vbt {
-  color: white;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 600;
   font-size: 1rem;
 }
