Updated assets (images now in uvx glitch)

--- a/src/css/Mocap.css
+++ b/src/css/Mocap.css
@@ -12,7 +12,7 @@
   width: 450px;
   z-index: 4;
   border-radius: var(--border-radius);
-  background-image: url('https://cdn.glitch.global/22bbb2b4-7775-42b2-9c78-4b39e4d505e9/grayCalibScreen.png?v=1722555385610');
+  background-image: url('https://cdn.glitch.global/155b1488-cef3-43d5-92c7-da25735e6c95/grayCalibScreen%20(1).png?v=1724094020419');
 }
 
 .calibration-text {
