--- a/src/css/ScoreDisplay.css
+++ b/src/css/ScoreDisplay.css
@@ -139,14 +139,16 @@
   width: 20%;
   box-shadow: inset 5px 0px 5px rgba(61, 142, 108, 0.2);
   overflow: hidden;
-  border: 2px solid rgba(61, 142, 108, 0.8);
+  /* border: 2px solid rgba(61, 142, 108, 0.8); */
+  border: 2px solid white;
 }
 
 .colored-bar {
   position: absolute;
   z-index: -1;
   height: 100%;
-  background-color: #32EEA4;
+  /* background-color: #32EEA4; */
+  background-color: var(--uvx-secondary);
 }
 
 @media screen and (max-width: 1250px) {
