Added some color css vars

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,14 +8,19 @@
   --font-primary: 'Barlow Semi Condensed', Arial, sans-serif;
   --font-weight: 600;
   --font-style: italic;
-  --font-accent-color: #f9cc35;
+  --font-accent-color: #F984FF;
   --callout-bg-color: #272727;
-  --uvx-primary: #0ed8a5;
-  --uvx-secondary: #3560f9;
+  --uvx-primary: #7085FF;
+  --uvx-secondary: #3C5199;
+  --uvx-r-gradient: linear-gradient(to right, var(--uvx-primary), transparent);
+  --uvx-l-gradient: linear-gradient(var(--uvx-primary), #B0BBFF);
+  --mask-r-gradient: linear-gradient(to right, rgba(0, 0, 0, 1.0) 30%, transparent 100%);
+  --mask-l-gradient: linear-gradient(to left, rgba(0, 0, 0, 1) 10%, transparent 100%);
   --border-radius: 1.5rem;
   --font-large: 4rem;
   --font-medium: 2.5rem;
   --font-small: 1.5rem;
+  --font-xsmall: 1rem;
 }
 
 html,
@@ -49,6 +54,13 @@ body,
 }
 
 /* Reusable classes for branding/theme */
+.frosted-glass {
+  border-radius: var(--border-radius);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
+  background: linear-gradient(45deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.27) 44%, rgba(255, 255, 255, 0) 100%);
+}
+
 .ui-h3,
 .ui-h2 {
   font-family: var(--font-primary);
