--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,10 +8,10 @@
   --font-primary: 'Barlow Semi Condensed', Arial, sans-serif;
   --font-weight: 600;
   --font-style: italic;
-  --font-accent-color: #F984FF;
   --callout-bg-color: #272727;
   --uvx-primary: #7085FF;
   --uvx-secondary: #3C5199;
+  --uvx-accent-color: #F984FF;
   --uvx-r-gradient: linear-gradient(to right, var(--uvx-primary), transparent);
   --uvx-l-gradient: linear-gradient(var(--uvx-primary), #B0BBFF);
   --mask-r-gradient: linear-gradient(to right, rgba(0, 0, 0, 1.0) 30%, transparent 100%);
@@ -69,7 +69,8 @@ body,
 }
 
 .ui-h3 {
-  color: var(--font-accent-color);
+  /* color: var(--uvx-accent-color); */
+  color: var(--uvx-secondary);
   font-size: var(--font-medium);
   letter-spacing: -1.181px;
   margin: 0;
