--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -25,7 +25,7 @@
 .button-secondary:hover {
   transform: scale(1.1);
   border: 2px solid var(--uvx-primary);
-  color: var(--font-accent-color);
+  color: var(--uvx-accent-color);
 }
 
 .button-primary {
