--- a/src/css/ResultsScreen.css
+++ b/src/css/ResultsScreen.css
@@ -130,7 +130,7 @@
   background-color: black;
   border-radius: var(--border-radius);
   padding: 2%;
-  border: 2px solid var(--font-accent-color);
+  border: 2px solid var(--uvx-accent-color);
   margin-top: 10px;
 }
 
