--- a/src/css/SlidingInfo.css
+++ b/src/css/SlidingInfo.css
@@ -19,11 +19,19 @@
   height: 100%;
 }
 
+.si-video-hue {
+  position: absolute;
+  width: 40%;
+  height: 100%;
+  background: linear-gradient(to right, var(--uvx-primary), transparent);
+}
+
 .sliding-info-video {
   position: absolute;
   min-width: 100%;
   min-height: 100%;
   left: -5%;
+  mix-blend-mode: luminosity;
 }
 
 .sliding-info-content {
@@ -47,14 +55,4 @@
   font-size: var(--font-small);
   font-family: var(--font-primary);
   color: white;
-}
-
-.img-placeholder {
-  margin-top: 3%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  background: rgb(46, 45, 45);
-  height: 100%;
 }
