--- a/src/css/SceneControls.css
+++ b/src/css/SceneControls.css
@@ -11,6 +11,16 @@
   margin-top: 20px;
 }
 
+.annButton {
+  background-color: var(--uvx-secondary);
+  border-radius: 5px;
+  padding: 10px;
+  margin: 0 10px;
+  color: white;
+  border: var(--font-accent-color) 2px solid;
+  cursor: pointer;
+}
+
 .musButton {
   background-color: var(--uvx-secondary);
   border-radius: 5px;
